--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,26 @@
-.App {
-  text-align: center;
-}
-body {
-background-image: url('./CSSStuff/snowflake-background.jpg');
+.game {
+  display: flex;
+  background-image: url(CSSStuff/snowflake-background.jpg);
+  height: 750px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.SnowPic {
-  width: 15em;
-  height: auto; 
+.alphabetButtons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 33%;
+  padding: 3em 0;
+}
+
+.alphabetButton {
+  margin: .5em;
+  width: 3em;
+  height: 3em;
+}
+
+.letter {
+  font-size: 36px;
 }
